--- a/exo2.yml
+++ b/exo2.yml
@@ -1,18 +1,47 @@
-openapi: 3.0.3
+openapi: 3.0.0
 info:
-  title: Exercise 2 - Home
+  title: API utilisateurs
   version: 1.0.0
-servers:
-  - url: http://localhost:8000
+
 paths:
-  /home:
+  /users:
     get:
+      summary: Obtenir liste d'utilisateurs
+      parameters:
+        - name: page
+          in: query
+          schema:
+            type: integer
+        - name: size
+          in: query
+          schema:
+            type: integer
       responses:
-        200:
-          description: Welcome HTML page
+        '200':
+          description: OK - liste des utilisateurs
           content:
-            text/html:
+            application/json:
               schema:
-                type: string
-                example: |
-                  <html><body><h1>Welcome home!</h1></body></html>
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                      example: 1
+                    name:
+                      type: string
+                      example: Alice
+                    email:
+                      type: string
+                      example: alice@example.com
+        '400':
+          description: Mauvais paramètres
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Bad types for provided query parameters
