--- a/exo3.yml
+++ b/exo3.yml
@@ -1,45 +1,126 @@
-openapi: 3.0.3
+openapi: 3.0.0
 info:
-  title: Exercise 3 - Create Posts
+  title: API de gestion de tâches
   version: 1.0.0
-servers:
-  - url: http://localhost:8000
+
 paths:
-  /posts:
-    post:
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: array
-              items:
-                type: object
-                properties:
-                  author:
-                    type: string
-                  title:
-                    type: string
-                  content:
-                    type: string
-                  creation_datetime:
-                    type: string
-                    format: date-time
+  /tasks:
+    get:
+      summary: Récupérer toutes les tâches
       responses:
-        201:
-          description: List of new posts with existing posts
+        '200':
+          description: Liste des tâches
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  type: object
-                  properties:
-                    author:
-                      type: string
-                    title:
-                      type: string
-                    content:
-                      type: string
-                    creation_datetime:
-                      type: string
-                      format: date-time
+                  $ref: '#/components/schemas/Task'
+
+    post:
+      summary: Créer des tâches
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                $ref: '#/components/schemas/Task'
+      responses:
+        '201':
+          description: Tâches créées
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Task'
+
+    delete:
+      summary: Supprimer une liste de tâches par ID
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                type: integer
+      responses:
+        '200':
+          description: Tâches supprimées
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Task'
+
+  /tasks/{id}:
+    get:
+      summary: Récupérer une tâche par ID
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Tâche trouvée
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Task'
+        '404':
+          description: Tâche non trouvée
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Task not found
+
+    delete:
+      summary: Supprimer une tâche par ID
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Tâche supprimée
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Task'
+        '404':
+          description: Tâche non trouvée
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Task not found
+
+components:
+  schemas:
+    Task:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 1
+        title:
+          type: string
+          example: Faire les courses
+        completed:
+          type: boolean
+          example: false
