--- a/exo4.yml
+++ b/exo4.yml
@@ -1,28 +1,70 @@
-openapi: 3.0.3
+openapi: 3.0.0
 info:
-  title: Exercise 4 - List Posts
+  title: API de recherche de produits
   version: 1.0.0
-servers:
-  - url: http://localhost:8000
+
 paths:
-  /posts:
+  /products:
     get:
+      summary: Rechercher des produits
+      parameters:
+        - $ref: '#/components/parameters/LimitParam'
+        - $ref: '#/components/parameters/QParam'
       responses:
-        200:
-          description: List of posts
+        '200':
+          description: Liste des produits trouvés
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  type: object
-                  properties:
-                    author:
-                      type: string
-                    title:
-                      type: string
-                    content:
-                      type: string
-                    creation_datetime:
-                      type: string
-                      format: date-time
+                  $ref: '#/components/schemas/Product'
+              examples:
+                plusieurs-produits:
+                  summary: Résultat avec plusieurs produits
+                  value:
+                    - name: "Pomme"
+                      expiration_datetime: "2025-10-01T12:00:00Z"
+                      price: 1.99
+                    - name: "Banane"
+                      expiration_datetime: "2025-09-15T08:00:00Z"
+                      price: 0.99
+                aucun-produit:
+                  summary: Résultat vide
+                  value: []
+
+components:
+  parameters:
+    LimitParam:
+      name: limit
+      in: query
+      description: Nombre maximum de produits à retourner
+      required: false
+      schema:
+        type: integer
+        example: 10
+
+    QParam:
+      name: q
+      in: query
+      description: Terme de recherche produit
+      required: false
+      schema:
+        type: string
+        example: pomme
+
+  schemas:
+    Product:
+      type: object
+      properties:
+        name:
+          type: string
+          example: Pomme
+        expiration_datetime:
+          type: string
+          format: date-time
+          example: "2025-10-01T12:00:00Z"
+        price:
+          type: number
+          format: float
+          example: 1.99
